--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<section id="header">
 				<header class="major">
 					<h1>Heena Minnich</h1>
-					<p>Software Consultant at Veeva Systems</p>
+					<p>Machine Learning Genius</p>
 					<p>Yokosuka, Kanagawa, Japan</p>
 				</header>
 				<div class="container">
