--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<div class="row">
 							<ul>
 								<li class="col1-item1 no-bullets">
-									<a href="pages\projects\Airline_Satisfaction_Analysis.html" target="_blank" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+									<a href="pages\projects\Airline_Satisfaction_Analysis.html" target="_blank" class="image fit thumb"><img src="images\airplane.jpg" alt="" /></a>
 									<h3>Airline Customer Satisfaction</h3>
 									<p>Using a variety of statistical analysis methods, determine what changes the airline can make to improve customer satisfication.</p>
 								</li>
