remove full portfolio link

--- a/index.html
+++ b/index.html
@@ -59,14 +59,11 @@
 							<h2>About Me</h2>
 						</header>
 						<p>I have a dual bachelor's degree in Electrical Engineering and Computer Engineering from Drexel University. I am currently pursuing a Master's in Computer Science from Old Dominion University, with an expected graduation in Spring of 2024. My thesis is on developing machine learning models to identify confirmed exoplanets from the NASA Kepler and TESS Mission light curve datasets.</p>
-						<!-- <ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
-						</ul> -->
 					</section>
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Projects</h2>
+						<h2>Sample Projects</h2>
 						<div class="row">
 							<ul>
 								<li class="col1-item1 no-bullets">
@@ -101,9 +98,6 @@
 								</li>
 							</ul>
 						</div>
-						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
 					</section>
 
 				<!-- Three -->
