--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 									<p>Using a variety of statistical analysis methods, determine what changes the airline can make to improve customer satisfication.</p>
 								</li>
 								<li class="col1-item2 no-bullets">
-									<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-									<h3>Ultricies lacinia interdum</h3>
-									<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+									<a href="https://github.com/heenaminnich/sokoban_solver" class="image fit thumb"><img src="images\puzzles.jpg" alt="" /></a>
+									<h3>Sokoban Solver</h3>
+									<p>A Python-Flask Web App to solve Sokoban Puzzles. Deployed using Docker.</p>
 								</li>
 								<li class="col2-item1 no-bullets">
 									<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
