--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/option1.jpeg" alt="" /></a>
-					<h1><strong>I am Heena Minnich</strong>, <br /> a machine learning engineer<br />
+					<h1><strong>I am Heena Minnich</strong>, <br /> a machine learning engineer and data scientist<br />
 					currently based in Japan.<br /></h1>
 				</div>
 			</header>
