--- a/index.html
+++ b/index.html
@@ -80,17 +80,17 @@
 									<h3>Sokoban Solver</h3>
 									<p>A Python-Flask Web App to solve Sokoban Puzzles. Deployed using Docker.</p>
 								</li>
-								<!-- <li class="col2-item2 no-bullets">
-									<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
+								<!--<li class="col2-item2 no-bullets">
+									<a href="https://colab.research.google.com/drive/1PGluZn7tA-ny5iZ0oO-dqE7makGhq6Ux?usp=sharing" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
 									<h3>Quam neque phasellus</h3>
 									<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-								</li>
+								</li>-->
 								<li class="col3-item1 no-bullets">
-									<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-									<h3>Nunc enim commodo aliquet</h3>
-									<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+									<a href="https://colab.research.google.com/drive/1PGluZn7tA-ny5iZ0oO-dqE7makGhq6Ux?usp=sharing" class="image fit thumb"><img src="images/bank2.jpg" alt="" /></a>
+									<h3>Santander Customer Satisfaction</h3>
+									<p>Use machine learning to idenitfy which anonymous customer features strongly correlate to customer satisfaction.</p>
 								</li>
-								<li class="col3-item2 no-bullets">
+								<!--<li class="col3-item2 no-bullets">
 									<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
 									<h3>Risus ornare lacinia</h3>
 									p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
