--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<header class="major">
 							<h2>About Me</h2>
 						</header>
-						<p>I have a dual bachelor's degree in Electrical Engineering and Computer Engineering from Drexel University. I am currently pursuing a Master's in Computer Science from Old Dominion University, with an expected graduation in Spring of 2024. My thesis is on developing machine learning models to identify confirmed exoplanets from the NASA Kepler and TESS Mission light curve datasets.</p>
+						<p>I have a dual bachelor's degree in Electrical Engineering and Computer Engineering from Drexel University. I am have recently completed a Master's in Computer Science from Old Dominion University. My thesis was on developing machine learning models to identify confirmed exoplanets from the NASA Kepler and TESS Mission light curve datasets.</p>
 					</section>
 
 				<!-- Two -->
